tests/invalid_nodepend/typeclass_test_1.err_exp
typeclass_test_1.m:005: Error: module must start with a `:- module'
typeclass_test_1.m:005:   declaration.
typeclass_test_1.m:012: In clause for predicate `main'/2:
typeclass_test_1.m:012:   unsatisfiable typeclass constraint:
typeclass_test_1.m:012:   `typeclass_test_1.numbered_type(int)'.
typeclass_test_1.m:019: Error: expected
typeclass_test_1.m:019:   `pred(<Name> / <Arity>) is <InstanceName>' or
typeclass_test_1.m:019:   `func(<Name> / <Arity>) is <InstanceName>', not
typeclass_test_1.m:019:   (type_num is foo_type_num).
typeclass_test_1.m:022: Syntax error at variable `_': operator or `.' expected.
